# LabsFP2

Lab2/: pyproject.toml  run.py
Lab2/app/main/: example.py
Lab2/app/modules/: generator.py
Lab2_2/: .gitignore  pyproject.toml
Lab2_2/src/main/: example.py
Lab3/memo/: LFU.py  main.py  memoize.py
Lab4/: queue.py  test_queue.py
Lab5/: async_map.py  demo.py
Lab6/: async_iterator.py
Lab7/: event_emitter.py
