[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lab2"
version = "0.1.0"
description = "Lab2 example project"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]